--- a/config.toml
+++ b/config.toml
@@ -10,6 +10,7 @@ pygmentscodefences  = true
 
 [params]
   sitename = "Vignesh Krishnamoorthy"
+  piwiktracking = "//analytics.vigneshkrishnamoorthy.me/piwik/"
 
 [[menu.main]]
     name = "Home"
